# universal_ffi

./: CHANGELOG.md  Makefile  README.md  pubspec.yaml
example/: Makefile  ffigen.yaml  src
example/assets/: libnative_example.dylib
example/lib/: example_library_wrapper.dart  native_example_bindings.dart
example/src/: CMakeLists.txt
example/web/: assets  main.dart
example/web/assets/emscripten/: native_example.js  native_example.wasm
example/web/assets/standalone/: native_example.wasm
example_ffi_plugin/: Makefile  pubspec.yaml
example_ffi_plugin/assets/emscripten/: native_example.js  native_example.wasm
example_ffi_plugin/example/: pubspec.yaml
example_ffi_plugin/example/ios/Runner/: Info.plist
example_ffi_plugin/example/ios/Runner.xcodeproj/: project.pbxproj
example_ffi_plugin/example/lib/: main.dart
example_ffi_plugin/example/macos/Runner.xcodeproj/: project.pbxproj
example_ffi_plugin/example/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
example_ffi_plugin/ios/Classes/: native_example_cpp.cpp
example_ffi_plugin/lib/: native_example.dart  native_example_bindings.dart
example_ffi_plugin/src/: CMakeLists.txt  native_example.h  native_example_cpp.cpp
lib/: ffi.dart  ffi_helper.dart  ffi_utils.dart
lib/src/wasm_ffi/: _ffi_helper.dart
